Fix footer overflow.

--- a/assets/css/navigation.css
+++ b/assets/css/navigation.css
@@ -69,6 +69,7 @@ header {
   border-bottom: 1px solid #ffbf00;
 }
 footer {
+  margin: 2.75em 0 0 0;
   padding: .25em 0 .25em 0;
   height: 2.75em;
   bottom: 0;
